--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ compiler:
   - clang
   - gcc
 
-script:
+before_script:
   - mkdir build
   - cd build
-  - cmake .. && make
+  - cmake ..
 
+script: make
