--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-4.9
+            - libboost-all-dev
       env: COMPILER=g++-4.9
     - compiler: gcc
       addons:
@@ -19,6 +20,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-5
+            - libboost-all-dev
       env: COMPILER=g++-5
     - compiler: clang
       addons:
@@ -28,6 +30,7 @@ matrix:
             - llvm-toolchain-precise-3.6
           packages:
             - clang-3.6
+            - libboost-all-dev
       env: COMPILER=clang++-3.6
     - compiler: clang
       addons:
@@ -37,6 +40,7 @@ matrix:
             - llvm-toolchain-precise-3.7
           packages:
             - clang-3.7
+            - libboost-all-dev
       env: COMPILER=clang++-3.7
 
 install:
